src/styles/global.css
@import url('https://fonts.googleapis.com/css2?family=Inter:opsz,wght@14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
@import "tailwindcss";

@import "./theme.css";
@import "./base.css";
@import "./utilities.css";
@import "./components.css";



#headerMenu ul {
	@apply grid grid-flow-col auto-cols-max justify-between text-center
}

#headerMenu li {
	@apply relative inline-block hover:font-semibold hover:cursor-pointer text-nowrap
}

#headerMenu li a {
	@apply before:content-[attr(data-text)] before:block before:font-bold before:h-0 before:invisible
}

#footerMenu ul {
	@apply flex flex-col text-sm gap-[1em]
}

#footerMenu li {
	@apply relative inline-block hover:font-semibold hover:cursor-pointer text-nowrap
}

#footerMenu li a {
	@apply before:content-[attr(data-text)] before:block before:font-bold before:h-0 before:invisible
}

#popoverMenu ul {
	@apply flex flex-col text-xl md:text-2xl gap-[1em]
}

#popoverMenu li {
	@apply relative inline-block hover:font-semibold hover:cursor-pointer text-nowrap
}

#popoverMenu li a {
	@apply before:content-[attr(data-text)] before:block before:font-bold before:h-0 before:invisible
}

#Details tr {
	@apply border-b border-white last:border-green
}

#Details th {
	@apply pb-[1em] first:pl-2 last:pr-2
}

#Details td {
	@apply py-[2em]
}

#Details tr:hover td {
	@apply bg-gray border-y border-green transition duration-150
}

#Financing .purchStep {
	@apply border-t border-green last:border-b;
	@apply flex flex-col gap-2 lg:grid lg:gap-0 grid-cols-2 grid-flow-col px-[4vw] py-7.5;
}

#Financing .purchStep h4 {
	@apply text-[22px] font-semibold
}

#Financing .purchStep p {
	@apply text-[18px] font-light
}

#access h4 {
	@apply text-green text-[52px] font-semibold
}

#access h4 span {
	@apply text-[38px] font-medium
}

#access h4+span {
	@apply text-lg font-light
}

#Contact fieldset label {
	@apply w-full border-b border-green font-light;
	@apply flex flex-col;
}

#Contact label :is(input, textarea) {
	@apply focus:outline-green;
}

#Params li {
	@apply flex justify-between first:border-t border-b border-green pt-[1.5em] pb-[1.5em] px-5
}

#Params li span {
	@apply first:font-semibold
}

[data-linkarea] {
	position: relative;
}

[data-link] {
	&::before {
		content: "";
		position: absolute;
		inset: 0;
	}
}

